Fix z-index issue with social icons

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -189,6 +189,7 @@ a {
 	fill: #fff;
 
 	svg {
+		position: relative;
 		display: block;
 		height: 100%;
 		width: 100%;
